fix overflow bug

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,3 +5,7 @@
   width: 100%;
   padding: 100vh 100vw;
 }
+
+body {
+  overflow: hidden;
+}
