--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,6 @@
   --light-text-color: #c9c9c9;
 }
 body {
-  overflow-x: hidden;
   margin: 0px;
   padding: 0px;
   color: var(--text-color);
